--- a/sbt-plugins/sbt-shared-ui/example/ui1/src/main/public/index.html
+++ b/sbt-plugins/sbt-shared-ui/example/ui1/src/main/public/index.html
@@ -1,10 +1,11 @@
 <html>
 
-	<head>
-		<script src="/public/js/main.js" type="text/javascript"></script>
-	</head>
-	<body>
-		<h1>Hi from UI1</h1>
-	</body>
+  <head>
+    <script src="/assets/js/ui1.js" type="text/javascript"></script>
+    <link href="/assets/less/main.css" rel="stylesheet">
+  </head>
+  <body>
+    <h1>Hi from UI1</h1>
+  </body>
 
 </html>
