Fixes regression where ~reStart was picking up changes from previous compile and not the current compile

--- a/sbt-plugins/sbt-shared-ui/example/ui1/src/main/public/index.html
+++ b/sbt-plugins/sbt-shared-ui/example/ui1/src/main/public/index.html
@@ -5,7 +5,7 @@
     <link href="/assets/less/main.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Hi from UI1</h1>
+    <h1 class="shared-h1">Hi from UI1</h1>
   </body>
 
 </html>
