--- a/sbt-plugins/sbt-shared-ui/example/ui3/src/main/assets/ui3/html/index.html
+++ b/sbt-plugins/sbt-shared-ui/example/ui3/src/main/assets/ui3/html/index.html
@@ -5,7 +5,7 @@
     <link href="/assets/ui3/less/main.css" rel="stylesheet">
   </head>
   <body>
-    <h1 class="shared-h1">Hi from UI3</h1>
+    <h1 class="shared-h1">Hi from UI3 (h1 color defined in shared)</h1>
   </body>
 
 </html>
